更新Activity的注意点

--- a/_posts/2019-12-27-Activity注意点.md
+++ b/_posts/2019-12-27-Activity注意点.md
@@ -98,5 +98,7 @@ adb shell dumpsys activity activities
 
 - 当被启动的Activity的**allowTaskReparenting**属性设置为true，且启动模式为singleTop或者standard时，启动时被启动的Activity会进入启动方的任务栈，但是在Launcher中点击被启动Activity对应的应用，打开的界面不是应用主界面，而且刚才在其他应用启动的Activity，且此时Activity已经从启动方任务栈移动到了本应用任务栈中。
 
+#### 3.4 特殊情况
 
+当应用入口Activity的启动模式为singleTask，由它启动ActivityA，ActivityA启动ActivityB，ActivityA和ActivityB的启动模式为standard，此时若点击Home返回桌面，再点击应用图标，此时界面显示的是MainActivity，相当于点击应用图标，系统重新启动了MainActivity，表现形式为singleTask的特性。
 
