--- a/_posts/2020-01-13-AIDL进阶.md
+++ b/_posts/2020-01-13-AIDL进阶.md
@@ -238,7 +238,7 @@ public class AIDLAdvancedActivity extends AppCompatActivity {
 
 ![服务端剩余连接数](https://i.postimg.cc/vH6Vmsn6/binder.jpg)
 
-客户端在退出时，回调用unregisterBookChangedCallback取消订阅，但发现服务端订阅数并没有变化。
+客户端在退出时，会调用unregisterBookChangedCallback取消订阅，但发现服务端订阅数并没有变化。
 
 ```java
 @Override
@@ -461,7 +461,7 @@ public void onServiceConnected(ComponentName name, IBinder service) {
 
 - IBookManager2： 是一个接口，继承了IInterface，该类定义服务端开放给外部的接口，也就是aidl文件中定义的方法
 - Stub： 是一个抽象类，实现了IBookManager2接口以及继承了Binder类，一般服务端Service的onBind方法返回该抽象类的子类实例，在子类示例中实现了具体服务端提供的服务。在客户端调用bindService时，服务端会将该Binder返回至客户端，使得客户端可以调用服务端提供的方法。
-- Proxy: 是一个代理类，实现了IBookManager2接口，这个类作用在客户端，客户端通过该类去调用服务端的方法(客户端和服务端不在同一个为进程中)
+- Proxy: 是一个代理类，实现了IBookManager2接口，这个类作用在客户端，客户端通过该类去调用服务端的方法(客户端和服务端不在同一个进程中)
 
 #### 4.1 服务端代码
 
