aidl进阶新增Binder连接池

--- a/_posts/2020-01-13-AIDL进阶.md
+++ b/_posts/2020-01-13-AIDL进阶.md
@@ -443,7 +443,229 @@ public void onServiceConnected(ComponentName name, IBinder service) {
 }
 ```
 
-### 四. AIDL Java层源码分析
+### 四. Binder连接池
+
+​	在之前的做法中，一个使用AIDL的业务服务端需要创建一个Service，若多个业务都要使用AIDL，那么每一个使用AIDL的业务服务端都需要创建一个自己的Service，这样多个Service会使得应用看起开十分臃肿，而且不好管理，此时就可以用到Binder连接池，服务端只需要存在一个Service，客户端通过业务码去从服务端获取对应业务的IBinder。
+
+![Binder连接池](https://i.postimg.cc/SRTvPG8n/binder.png)
+
+#### 4.1 服务端
+
+##### 1. 创建各种aidl文件以及具体业务的实现
+
+计算服务
+
+```java
+// IComputer.aidl
+package com.parting_soul.server;
+
+// Declare any non-default types here with import statements
+
+interface IComputer {
+
+    int add(int a,int b);
+}
+```
+
+具体的业务实现
+
+```java
+public static class ComputerImp extends IComputer.Stub {
+  @Override
+  public int add(int a, int b) throws RemoteException {
+    return a + b;
+  }
+}
+```
+
+获取消息服务
+
+```java
+// IModel.aidl
+package com.parting_soul.server;
+
+// Declare any non-default types here with import statements
+
+interface IModel {
+    String getMessage();
+}
+```
+
+具体的业务实现
+
+```java
+public static class ComputerImp extends IComputer.Stub {
+  @Override
+  public int add(int a, int b) throws RemoteException {
+    return a + b;
+  }
+}
+```
+
+##### 2. 创建一个用于提供上述业务的IBinder的AIDL文件
+
+```java
+// IBinderPool.aidl
+package com.parting_soul.server;
+
+// Declare any non-default types here with import statements
+
+interface IBinderPool {
+    const int BINDER_CODE_NONE = 0;
+
+    const int BINDER_CODE_COMPUTER = 1;
+
+    const int BINDER_CODE_GET_MESSGE = 2;
+
+    IBinder queryBinder(int code);
+}
+```
+
+##### 3. 创建服务端的Service，根据客户端的业务code返回对应的Binder
+
+```java
+public class BinderPoolService extends Service {
+
+    @Override
+    public IBinder onBind(Intent intent) {
+        return new IBinderPool.Stub() {
+            @Override
+            public IBinder queryBinder(int code) throws RemoteException {
+                IBinder binder = null;
+                switch (code) {
+                    case IBinderPool.BINDER_CODE_COMPUTER:
+                        binder = new ComputerImp();
+                        break;
+                    case IBinderPool.BINDER_CODE_GET_MESSGE:
+                        binder = new ModelImp();
+                        break;
+                    default:
+                        break;
+                }
+                return binder;
+            }
+        };
+    }
+}
+```
+
+#### 4.2 客户端
+
+Binder连接池：主要用于与服务端建立连接以及提供获取对应业务Binder的API
+
+```java
+public class BinderPool {
+    private static volatile BinderPool sBinderPool;
+    private Context mContext;
+    private boolean isBind;
+    private IBinderPool mIBinderPool;
+
+    private BinderPool(Context context) {
+        this.mContext = context.getApplicationContext();
+    }
+
+    public static BinderPool getInstance(Context context) {
+        if (sBinderPool == null) {
+            synchronized (BinderPool.class) {
+                if (sBinderPool == null) {
+                    sBinderPool = new BinderPool(context);
+                }
+            }
+        }
+        return sBinderPool;
+    }
+
+    /**
+     * 绑定服务端的Service
+     */
+    public void connect() {
+        Intent intent = new Intent();
+        intent.setClassName("com.parting_soul.server", "com.parting_soul.server.BinderPoolService");
+        mContext.bindService(intent, mServiceConnection, Context.BIND_AUTO_CREATE);
+    }
+
+    /**
+     * 取消绑定
+     */
+    public void disconnect() {
+        if (isBind && mIBinderPool != null && mIBinderPool.asBinder().isBinderAlive()) {
+            mIBinderPool.asBinder().unlinkToDeath(mDeathRecipient, 0);
+        }
+        mContext.unbindService(mServiceConnection);
+        isBind = false;
+    }
+
+
+    /**
+     * 根据业务code 获取指定的IBinder
+     *
+     * @param code
+     * @return
+     */
+    public IBinder queryBinder(int code) {
+        IBinder binder = null;
+        try {
+            binder = mIBinderPool.queryBinder(code);
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
+        return binder;
+    }
+
+    private ServiceConnection mServiceConnection = new ServiceConnection() {
+        @Override
+        public void onServiceConnected(ComponentName name, IBinder service) {
+            try {
+                mIBinderPool = IBinderPool.Stub.asInterface(service);
+                mIBinderPool.asBinder().linkToDeath(mDeathRecipient, 0);
+                isBind = true;
+                Log.d("服务连接成功");
+            } catch (RemoteException e) {
+                e.printStackTrace();
+            }
+        }
+
+        @Override
+        public void onServiceDisconnected(ComponentName name) {
+            isBind = false;
+        }
+    };
+
+
+    /**
+     * 死亡代理
+     */
+    private IBinder.DeathRecipient mDeathRecipient = new IBinder.DeathRecipient() {
+        @Override
+        public void binderDied() {
+            disconnect();
+            connect();
+        }
+    };
+}
+```
+
+客户端调用(服务端的方法可能是耗时操作，因此放在子线程中)
+
+```java
+private void add() {
+  new Thread(new Runnable() {
+    @Override
+    public void run() {
+      try {
+        IBinder binder = mBinderPool.queryBinder(IBinderPool.BINDER_CODE_COMPUTER);
+        IComputer computer = IComputer.Stub.asInterface(binder);
+        int result = computer.add(1, 2);
+        Log.d("计算结果: a + b = " + result);
+      } catch (Exception e) {
+        e.printStackTrace();
+      }
+    }
+  }).start();
+}
+```
+
+### 五. AIDL Java层源码分析
 
 当客户端调用bindService时，服务端会返回一个包含服务端业务的Binder对象，客户端就可以通过该Binder对象调用服务端提供的服务。我们在Java层来看看它的实现方式。
 
@@ -463,7 +685,7 @@ public void onServiceConnected(ComponentName name, IBinder service) {
 - Stub： 是一个抽象类，实现了IBookManager2接口以及继承了Binder类，一般服务端Service的onBind方法返回该抽象类的子类实例，在子类示例中实现了具体服务端提供的服务。在客户端调用bindService时，服务端会将该Binder返回至客户端，使得客户端可以调用服务端提供的方法。
 - Proxy: 是一个代理类，实现了IBookManager2接口，这个类作用在客户端，客户端通过该类去调用服务端的方法(客户端和服务端不在同一个进程中)
 
-#### 4.1 服务端代码
+#### 5.1 服务端代码
 
 首先看Stub类，服务端Service要给客户端提供服务，需要在onBind方法中返回一个IBinder对象，Stub是一个继承了Binder类，实现了IBookManager2的抽象类，在Service的onBind方法中需要返回一个该类的实现类，在实现类中书写具体的服务逻辑。
 
@@ -651,7 +873,7 @@ public boolean onTransact(int code, android.os.Parcel data, android.os.Parcel re
 }
 ```
 
-#### 4.2 客户端代码
+#### 5.2 客户端代码
 
 现在来看客户端，客户端在绑定Service成功后，会获取到一个IBinder对象，该对象类型为BindProxy，是服务端返回Binder的代理类。由于客户端需要调用服务端提供的API，所以需要将该BindProxy对象转化为具体的接口类型。
 
@@ -733,7 +955,7 @@ private static class Proxy implements IBookManager2 {
 
 客户端可以调服务端的方法，实际上是调用了Proxy类中的方法，例如insert方法，在该方法中创建一个用于写方法形参的Parcel以及一个用于写入返回值的Parcel对象，然后通过IBinder对象发起RPC，同时当前线程会被挂起(这也是客户端调用服务端方法时，尽可能的放在子线程中，防止主线程被阻塞发生ANR)。
 
-#### 4.3 总结
+#### 5.3 总结
 
 ![AIDL Java层流程](https://i.postimg.cc/0N8H9rhn/aidl-Java.png)
 
