AIDL入门新增oneway用法

--- a/_posts/2020-01-03-AIDL入门.md
+++ b/_posts/2020-01-03-AIDL入门.md
@@ -417,3 +417,29 @@ public class MainActivity extends AppCompatActivity {
 }
 ```
 
+#### 3. oneway
+
+aidl中定义的方法可以用oneway修饰，但是用oneway修饰后方法不能有返回值
+
+oneway修饰的方法在不同场景调用的方式不同
+
+- 当客户端和服务端不再同一个进程中，使用oneway修饰的方法为异步方法，客户端不用等待服务端方法执行完成，直接返回
+- 如果客户端可服务端在同一个进程中，使用oneway修饰的方法为同步方法
+
+oneway修饰方法
+
+```java
+// IBookManager.aidl
+package com.parting_soul.server;
+
+// Declare any non-default types here with import statements
+import com.parting_soul.server.Book;
+
+
+interface IBookManager {
+ 	....
+
+  oneway void getData();
+}
+```
+
