--- a/_posts/2019-11-26-APT技术.md
+++ b/_posts/2019-11-26-APT技术.md
@@ -52,7 +52,7 @@ getAnnotation() //当前元素被修饰的注解信息
 
 打印信息如下：
 
-![image-20191121194726136](https://i.postimg.cc/ryCFs14v/element.png)
+![element-01](http://qagey3wv5.bkt.clouddn.com//element-01.png)
 
 Element的概念理清楚了，现在可以创建自己的注解处理器了，该注解处理器继承自AbstractProcessor，处理器中每个方法都有对应的含义。
 
@@ -340,7 +340,7 @@ annotationProcessor project(':compiler')
 
 build一下项目，就会在app的build中生成类文件
 
-![image-20191126135827768](https://i.postimg.cc/rp0ww7GJ/apt.png)
+![apt](http://qagey3wv5.bkt.clouddn.com/apt.png)
 
 随便查看一个生成的类代码
 
