--- a/_posts/2019-12-25-Android消息机制.md
+++ b/_posts/2019-12-25-Android消息机制.md
@@ -693,7 +693,7 @@ private void removeAllMessagesLocked() {
 
 #### 3.7 总结
 
-![handler](https://i.postimg.cc/0NpmJzrF/handler.png)
+![handler](http://qagey3wv5.bkt.clouddn.com//handler.png)
 
 - Handler将消息发送至消息队列，消息在消息队列中按照执行的时间点从小到大且以链表的方式排列
 - Looper用于从消息队列中取出消息和对消息进行分发，loop是一个死循环，它会不断的从消息队列中取出消息，若存在可执行的消息，则将消息分发至Handler进行处理
