--- a/_posts/2020-01-03-AIDL入门.md
+++ b/_posts/2020-01-03-AIDL入门.md
@@ -110,7 +110,7 @@ interface IBookManager {
 
 首先在服务端创建aidl文件，声明要暴露出来的接口方法
 
-![aidl文件目录](https://i.postimg.cc/Xqt8cDt0/image.png)
+![image5](http://qagey3wv5.bkt.clouddn.com//image (5).png)
 
 与aidl相关的文件可以单独建立一个文件夹存放，可以方便的拷贝整个文件夹到客户端
 
@@ -237,7 +237,7 @@ interface IBookManager {
 
 点击Build -> Rebuild Project后会为每个aidl文件生成通信的实现类
 
-![AIDL实现类生成路径](https://i.postimg.cc/Dwhx0RT9/Xnip2020-01-03-15-44-21.jpg)
+![image-20200521192834555](http://qagey3wv5.bkt.clouddn.com//image-20200521192834555.png)
 
 ##### 3. 创建服务端Service
 
@@ -301,7 +301,7 @@ public class BookManagerService extends Service {
 
 把服务端整个aidl文件夹拷贝到客户端，同样位于main目录下。
 
-![客户端aidl文件存放位置](https://i.postimg.cc/5y7fy8HG/Xnip2020-01-03-15-53-26.jpg)
+![客户端aidl文件存放位置](http://qagey3wv5.bkt.clouddn.com//image-20200521192940431.png)
 
 同样需要指定aidl的位置
 
