--- a/_posts/2020-01-13-AIDL进阶.md
+++ b/_posts/2020-01-13-AIDL进阶.md
@@ -236,7 +236,7 @@ public class AIDLAdvancedActivity extends AppCompatActivity {
 
 在服务端执行指定客户端的取消订阅请求后打印了当前服务端持有的客户端订阅数，若当前客户端退出，可以看一下服务端的订阅数打印结果：
 
-![服务端剩余连接数](https://i.postimg.cc/vH6Vmsn6/binder.jpg)
+![服务端剩余连接数](http://qagey3wv5.bkt.clouddn.com//binder.jpg)
 
 客户端在退出时，会调用unregisterBookChangedCallback取消订阅，但发现服务端订阅数并没有变化。
 
@@ -263,7 +263,7 @@ public void unregisterBookChangedCallback(OnBookChangedCallback callback) throws
 
 再次进行同样的操作，可以看到执行结果
 
-![执行结果](https://i.postimg.cc/xjXRLBH9/binder-2.jpg)
+![执行结果](http://qagey3wv5.bkt.clouddn.com//binder-2.jpg)
 
 我们发现客户端传递到unregisterBookChangedCallback的回调接口不在我们保存的客户端接口列表中，其实进程间的数据传递本质是对象的序列化与反序列化的过程，毕竟两个进程不是位于同一个虚拟机中，拥有不同的内存空间，所以Binder会将客户端的传递过来的对象进行序列化与反序列化，生成一个新的对象副本。
 
@@ -337,7 +337,7 @@ public class RemoteCallbackList<E extends IInterface> {
 
 运行结果：
 
-![IBinder](https://i.postimg.cc/9QhY5Mkf/aidl.jpg)
+![IBinder](http://qagey3wv5.bkt.clouddn.com//aidl参数解绑.jpg)
 
 可以看到运行结果和我们的猜想一致，同一个aidl对象传递时，服务端中该aidl对象的IBinder是一样的。
 
@@ -447,7 +447,7 @@ public void onServiceConnected(ComponentName name, IBinder service) {
 
 ​	在之前的做法中，一个使用AIDL的业务服务端需要创建一个Service，若多个业务都要使用AIDL，那么每一个使用AIDL的业务服务端都需要创建一个自己的Service，这样多个Service会使得应用看起开十分臃肿，而且不好管理，此时就可以用到Binder连接池，服务端只需要存在一个Service，客户端通过业务码去从服务端获取对应业务的IBinder。
 
-![Binder连接池](https://i.postimg.cc/SRTvPG8n/binder.png)
+![Binder连接池](http://qagey3wv5.bkt.clouddn.com//binder.png)
 
 #### 4.1 服务端
 
@@ -673,11 +673,11 @@ private void add() {
 
 我们声明了IBookManager2这个aidl文件后，编译项目，项目会在指定的文件夹中创建一个IBookManager2类。
 
-![aidl类生成路径](https://i.postimg.cc/kGNDxnvj/aidl.jpg)
+![aidl类生成路径](http://qagey3wv5.bkt.clouddn.com/aidl类生成位置.jpg)
 
 这个生成的IBookManager2类的UML类图如下：
 
-![aidl生成类UML](https://i.postimg.cc/8C3bYHQ2/aidl.png)
+![aidl生成类UML](http://qagey3wv5.bkt.clouddn.com//aidl.png)
 
 可以看到有几个核心类：
 
@@ -957,7 +957,7 @@ private static class Proxy implements IBookManager2 {
 
 #### 5.3 总结
 
-![AIDL Java层流程](https://i.postimg.cc/0N8H9rhn/aidl-Java.png)
+![AIDL Java层流程](http://qagey3wv5.bkt.clouddn.com/aidl Java层流程.png)
 
 1. 客户端绑定服务端的Service，绑定成功后服务端返回一个代理的IBinder对象
 
