替换图片域名

--- a/_posts/2019-12-27-Activity注意点.md
+++ b/_posts/2019-12-27-Activity注意点.md
@@ -13,7 +13,7 @@ tags:
 
 ### 1. setResult调用时机
 
-![image](http://qagey3wv5.bkt.clouddn.com/image-121.png)
+![image](http://img.partingsoul.cn/image-121.png)
 
 场景： CommonActivity使用startForResult启动ActivityOne
 
@@ -69,13 +69,13 @@ adb shell dumpsys activity activities
 
 任务栈结构图
 
-![imgage2](http://qagey3wv5.bkt.clouddn.com//image (2).png)
+![imgage2](http://img.partingsoul.cn//image (2).png)
 
 可以看到虽然ActivityA启动模式为singleTask且指定了任务栈，但是还是和启动它的Activity放在了一个任务栈中
 
 若MainActivity采用startActivity的方式启动ActvityA，此时ActivityA会位于自己的任务栈中
 
-![iamge3](http://qagey3wv5.bkt.clouddn.com//image (3).png)
+![iamge3](http://img.partingsoul.cn//image (3).png)
 
 #### 3.2 创建新的任务栈按Home键切换至Lancher再点击应用图标
 
@@ -83,7 +83,7 @@ adb shell dumpsys activity activities
 
 还是上述三个Activity，第一次打来应用，MainActivity会启动ActivityA，ActivityA的启动模式为singleTask，ActivityA中启动ActivityB，此时的任务栈内容
 
-![image4](http://qagey3wv5.bkt.clouddn.com//image (4).png)
+![image4](http://img.partingsoul.cn//image (4).png)
 
 此时按住Home键返回至Lancher界面，然后点击该应用应用图标，会发现当前打开的界面是MainActivity,而不是ActivityB，也就是打开的是应用默认任务栈的栈顶Activity。
 
