--- a/_posts/2020-05-21-Flutter工程搭建.md
+++ b/_posts/2020-05-21-Flutter工程搭建.md
@@ -16,7 +16,7 @@ tags:
 
 在[官网](https://developer.android.google.cn/studio)下载最新版的AndroidStudio，双击安装。安装完成后通过AVD Manger安装Android 模拟器。
 
-![image-20200517173626743](http://qagey3wv5.bkt.clouddn.com//image-20200517173626743.png)
+![image-20200517173626743](http://img.partingsoul.cn//image-20200517173626743.png)
 
 ### 2. 安装Xcode
 
@@ -69,7 +69,7 @@ flutter doctor
 
 若缺少必要的插件或者环境，运行该命令后会有提示，左侧打钩的表示这个IDE配置正常；叹号的表示缺少一些插件，需要安装。
 
-![image-20200517175611762](http://qagey3wv5.bkt.clouddn.com//image-20200517175611762.png)
+![image-20200517175611762](http://img.partingsoul.cn//image-20200517175611762.png)
 
 所有准备工作完成后，启动一个运行flutter项目的模拟器
 
