--- a/_posts/2020-09-24-自定义View-水平滚动控件.md
+++ b/_posts/2020-09-24-自定义View-水平滚动控件.md
@@ -4,7 +4,7 @@ title:      自定义View-水平滚动控件
 subtitle:
 date:       2020-09-24
 author:     parting_soul
-header-img: img/持续集成01.jpg
+header-img: img/水平滚动控件.jpg
 catalog: true
 tags:
     - Android
