--- a/_posts/2020-09-25-自定义View-仿应用商店详情页(一).md
+++ b/_posts/2020-09-25-自定义View-仿应用商店详情页(一).md
@@ -4,7 +4,7 @@ title:      自定义View-仿应用商店详情页(一)
 subtitle:
 date:       2020-09-25
 author:     parting_soul
-header-img: img/messenger源码分析.jpg
+header-img: img/仿应用商店.jpg
 catalog: true
 tags:
     - Android
